Fix header styling so task bars don't overlap over header

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ header {
   box-shadow: var(--shadow);
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 
 .title {
